Enhance UI look and feel. - Improve window size constraints - Add css styling for a selected server to make it easier to change and maintain. - Made selected servers not squish on selection - Added padding to prevent borders from going off the screen. - Made support indicator surrounded by a black box to make it look better and easier to hover over for the tooltip

--- a/launcher/src/main/resources/styles/base-style.css
+++ b/launcher/src/main/resources/styles/base-style.css
@@ -35,6 +35,15 @@
     -scale-factor: 1.33;
 }
 
+.entry-selected {
+    -fx-border-color: white;
+    -fx-border-style: solid;
+    -fx-border-radius: 0;
+    -fx-border-width: 3;
+    -fx-border-insets: -3;
+    -fx-background-color: #000000;
+}
+
 .mc-button-text {
     -fx-font-size: 1em;
     -fx-text-fill: #FFFFFF;
@@ -135,6 +144,11 @@
 
 .mod-info-field-value {
     -fx-fill: #ffffff;
+}
+
+.stack-pane-rounded {
+    -fx-background-color: rgba(0, 0, 0, 0.75);
+    -fx-background-radius: 2;
 }
 
 .pinger-motd-ping-error {
